Changed profile pic

--- a/style.css
+++ b/style.css
@@ -49,8 +49,12 @@ html {
 
 .w3-hover-opacity {
     cursor: pointer;
+
 }
 
+.profilepic{
+    width: 30%;
+}
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1600px) {
 
